2017-11-03  Jeff Law  <law@redhat.com>

	* gcc.target/i386/stack-check-12.c: New test.

2017-11-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/78821
	* gcc.dg/store_merging_13.c: New test.
	* gcc.dg/store_merging_14.c: New test.

2017-11-03  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/large_real_kind_2.F90: Test passes on FreeBSD.  Remove
	dg-xfail-if directive.

2017-11-03  Sandra Loosemore  <sandra@codesourcery.com>

	* gcc.target/mips/msa.c: Add -fcommon to dg-options.

2017-11-03  Uros Bizjak  <ubizjak@gmail.com>

	PR testsuite/82828
	PR rtl-optimization/70263
	* gcc.target/i386/pr70263-2.c: Fix invalid testcase.

2017-11-03  Marc Glisse  <marc.glisse@inria.fr>

	* gcc.dg/tree-ssa/negneg-1.c: New file.
	* gcc.dg/tree-ssa/negneg-2.c: Likewise.
	* gcc.dg/tree-ssa/negneg-3.c: Likewise.
	* gcc.dg/tree-ssa/negneg-4.c: Likewise.

2017-11-03  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/no-strict-overflow-3.c (foo): Update magic
	value to not clash with frequency.
	* gcc.dg/strict-overflow-3.c (foo): Likewise.
	* gcc.dg/tree-ssa/builtin-sprintf-2.c: Update template.
	* gcc.dg/tree-ssa/dump-2.c: Update template.
	* gcc.dg/tree-ssa/ifc-10.c: Update template.
	* gcc.dg/tree-ssa/ifc-11.c: Update template.
	* gcc.dg/tree-ssa/ifc-12.c: Update template.
	* gcc.dg/tree-ssa/ifc-20040816-1.c: Update template.
	* gcc.dg/tree-ssa/ifc-20040816-2.c: Update template.
	* gcc.dg/tree-ssa/ifc-5.c: Update template.
	* gcc.dg/tree-ssa/ifc-8.c: Update template.
	* gcc.dg/tree-ssa/ifc-9.c: Update template.
	* gcc.dg/tree-ssa/ifc-cd.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr56541.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr68583.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr69489-1.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr69489-2.c: Update template.
	* gcc.target/i386/pr61403.c: Update template.

2017-11-03  Nathan Sidwell  <nathan@acm.org>

	* lib/scanlang.exp: Fix error message to refer to scan-lang-dump.

	PR c++/82710
	* g++.dg/warn/pr82710.C: More cases.
