@@ -1,5 +1,8 @@
 2017-11-03  Jeff Law  <law@redhat.com>
 
+	PR target/82823
+	* g++.dg/torture/pr82823.C: New test.
+
 	* gcc.target/i386/stack-check-12.c: New test.
 
 2017-11-03  Jakub Jelinek  <jakub@redhat.com>
